<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Insumos_act">

    <androidx.cardview.widget.CardView
        android:layout_width="378dp"
        android:layout_height="646dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="170dp"
                android:layout_height="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/bienvenido_a_biofit"
                android:textColor="#009688"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.091"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="285dp"
                android:layout_height="93dp"
                android:layout_marginTop="24dp"
                android:text="@string/biofit_es_la_herramienta_fitness_definitiva_que_te_ayudara_en_este_casoa_gestionar_de_mejor_forma_tus_insumos_podras_realizar_el_calculo_por_costo_de_mantencion_de_cada_uno_de_ellos_de_forma_rapida_y_sencilla"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.266"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Spinner
                android:id="@+id/spnInsumos"
                android:layout_width="228dp"
                android:layout_height="48dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/result"
                android:layout_width="184dp"
                android:layout_height="70dp"
                android:layout_marginTop="44dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spnInsumos" />

            <RatingBar
                android:id="@+id/rb"
                android:layout_width="239dp"
                android:layout_height="44dp"
                android:layout_marginTop="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="153dp"
                android:layout_height="49dp"
                android:backgroundTint="#2874a6"
                android:onClick="Calcular"
                android:text="@string/calcular"
                app:cornerRadius="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rb" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>